tests/e2e/semantics/readonly_if4.error
Error: syntax error in story at line 8, column 5

8|        c[1] = 2
          ^^^^^^

E0127: `c[]` is readonly and can not be assigned to.
