tests/e2e/semantics/readonly_if4.story
# FEAT: globals=False
if true
    a = 1
else if true
    b = 1
else
    c = [1, 2, 3]
    c[1] = 2
